--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="background">
         <header>
             <nav>
-                <a href="#about">About</a>
+                <a href="#about">サーバーについて</a>
                 <a href="#policy">運営方針</a>
                 <a href="#members">運営メンバー</a>
                 <a href="#contact">お問い合わせ</a>
