--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    <div class="animation"></div>
+    <div class="mask" id="animation"></div>
     <div class="background">
         <header>
             <nav>
