--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    <div class="mask" id="animation"></div>
+    <div class="animation"></div>
     <div class="background">
         <header>
             <nav>
-                <a href="#about">サーバーについて</a>
+                <a href="#about">About</a>
                 <a href="#policy">運営方針</a>
                 <a href="#members">運営メンバー</a>
                 <a href="#contact">お問い合わせ</a>
