--- a/index.html
+++ b/index.html
@@ -2,24 +2,28 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ホロライブ非公式ファンサーバー</title>
     <link rel="stylesheet" href="styles.css">
     <script src="script.js" defer></script>
 </head>
 <body>
-    <div class="animation"></div>
-    <div class="background">
-        <header>
-            <nav>
-                <a href="#about">About</a>
-                <a href="#policy">運営方針</a>
-                <a href="#members">運営メンバー</a>
-                <a href="#contact">お問い合わせ</a>
-            </nav>
-        </header>
-        <h1>ようこそ！ホロライブ非公式ファンサーバーへ</h1>
+    <header>
+        <h1>ホロライブ</h1>
+        <h2>非公式</h2>
+        <h3>ファンサーバー</h3>
+        <div class="menu-btn" onclick="toggleMenu()">
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+    </header>
+    <div class="modal" id="menuModal">
+        <ul>
+            <li>サーバー概要</li>
+            <li>運営メンバー</li>
+            <li>運営方針</li>
+            <li>お問い合わせ</li>
+        </ul>
     </div>
+    ...
 </body>
 </html>
